--- a/Index.html
+++ b/Index.html
@@ -1,36 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Weather-Driven Agriculture</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Weather Prediction App</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #83a4d4, #b6fbff);
+      text-align: center;
+      padding: 50px;
+    }
+    .container {
+      background-color: white;
+      border-radius: 20px;
+      padding: 30px;
+      display: inline-block;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    input, button {
+      padding: 10px;
+      font-size: 16px;
+      margin: 10px;
+    }
+    #weather {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Smart Weather-Driven Agriculture Decisions</h1>
-    <p>Empowering farmers with real-time weather insights</p>
-  </header>
 
-  <main>
-    <section class="features">
-      <div class="feature-card">
-        <h2>Real-Time Weather Data</h2>
-        <p>Get the latest weather updates to plan your crop activities efficiently.</p>
-      </div>
-      <div class="feature-card">
-        <h2>Crop Recommendations</h2>
-        <p>Receive personalized crop suggestions based on climate and soil conditions.</p>
-      </div>
-      <div class="feature-card">
-        <h2>Risk Alerts</h2>
-        <p>Early alerts for drought, frost, or storms to prevent crop damage.</p>
-      </div>
-    </section>
-  </main>
+  <div class="container">
+    <h1>Weather Prediction App</h1>
+    <input type="text" id="city" placeholder="Enter city name">
+    <button onclick="getWeather()">Get Weather</button>
+    <div id="weather"></div>
+  </div>
 
-  <footer>
-    <p>&copy; 2025 SmartAgri Solutions. All rights reserved.</p>
-  </footer>
+  <script>
+    async function getWeather() {
+      const city = document.getElementById('city').value;
+      const apiKey = 'YOUR_API_KEY_HERE'; // Replace with your actual API key
+      const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
+
+      try {
+        const response = await fetch(url);
+        const data = await response.json();
+
+        if (data.cod === "404") {
+          document.getElementById('weather').innerHTML = "<p>City not found.</p>";
+          return;
+        }
+
+        const html = `
+          <h2>${data.name}, ${data.sys.country}</h2>
+          <p><strong>Temperature:</strong> ${data.main.temp} °C</p>
+          <p><strong>Weather:</strong> ${data.weather[0].description}</p>
+          <p><strong>Humidity:</strong> ${data.main.humidity}%</p>
+          <p><strong>Wind Speed:</strong> ${data.wind.speed} m/s</p>
+        `;
+        document.getElementById('weather').innerHTML = html;
+
+      } catch (error) {
+        document.getElementById('weather').innerHTML = "<p>Error fetching data.</p>";
+        console.error(error);
+      }
+    }
+  </script>
+
 </body>
 </html>
