--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
     <div id="weather"></div>
   </div>
 
-  <script>
+ <!-- <script>
     async function getWeather() {
       const city = document.getElementById('city').value;
       const apiKey = 'YOUR_API_KEY_HERE'; // Replace with your actual API key
@@ -66,6 +66,6 @@
       }
     }
   </script>
-
+-->
 </body>
 </html>
