--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Weather App</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <img src="night-theme.png" class="theme-icon" alt="Theme" />
-    <form id="weatherForm">
-      <label for="cityInput">Weather Search:</label>
-      <div class="input-group">
-        <input type="text" id="cityInput" placeholder="Enter city name" required />
-        <button type="submit">SUBMIT</button>
-      </div>
-    </form>
-    <div id="weatherResult"></div>
+  <div class="weather-container">
+    <h1>Weather Forecast</h1>
+    <input type="text" id="cityInput" placeholder="Enter city name">
+    <button onclick="getWeather()">Get Weather</button>
+    <div class="weather-result" id="weatherResult"></div>
   </div>
 
   <script src="script.js"></script>
